--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Vai ser uma imagem aqui</h1>
-        <ul>
-            <li>Escola</li>
-            <li>Estudantes</li>
+    <header class="cabecalho">
+       <img class="cabecalho-imagem" src="alurastart.png" alt="logo da alurastart">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">Escola</li>
+            <li class="cabecalho-lista-item">Estudantes</li>
+        </u>
     </header>
-    </ul>
-  
+    <section class="escola">
+        <div class="escola-div-conteudo"></div>
+        <h2 class="escola-titulo">Sobre a Escola</h2>
+        <p class="escola-texto-um">A escola Alura foi fundada em 2010 com o objetivo de ensinar Pensamento Computacional através da Programação.
+        <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!
+        </div>
+        <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
+
+    </section>
 </body>
 </html>
