--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.google.com/specimen/Roboto+Condensed">
+    <link rel="preconnect" href="https://fonts.google.com/specimen/Inconsolata" crossorigin>
+    <link href="https://fonts.google.com/specimen/Josefin+Sans" rel="stylesheet">
+</head> 
 <body>
     <header class="cabecalho">
-       <img class="cabecalho-imagem" src="alurastart.png" alt="logo da alurastart">
+       <img class="cabecalho-imagem" src="logoduque.png.jpg" alt="logo da duque">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudantes</li>
@@ -22,7 +25,13 @@
         <p class="escola-texto-dois">A turma mais famosa é a Segunda Série A. Uma turma diversa e engajada, as vezes, um pouco bagunceira, mas que entrega excelentes resultados!
         </div>
         <img class="escola-imagem" src="Formula-bro.png" alt="Professora no quadro">
-
+   </section>
+    <section class="estudante">
+        <h2 class="estudnte-titulo"> Quem são nossos Estudantes?</h2>
+        <div></div>
+        <img class="estudante-imagem" src="yan.jpg" alt="foto do yan">
+        <h3  class="estudante-nome">yan</h3>
+        <img class="estudante-icone" src="github.jpg" alt="icone github"
     </section>
 </body>
 </html>
